# learning-rust-with-axum

./: Cargo.toml  README.md
src/: main.rs
src/domain/task/: entities.rs  mod.rs  task_repository.rs  task_service.rs
src/domain/user/: entities.rs  mod.rs  user_repository.rs  user_service.rs
src/infrastructure/: app_state.rs  db.rs  mod.rs
src/infrastructure/repositories/: task_repository_impl.rs  user_repository_impl.rs
src/interfaces/http/: routes.rs
src/interfaces/http/handlers/: task_handlers.rs
src/interfaces/http/routes/: mod.rs  task_routes.rs
