[package]
name = "rust-core-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres","tls-native-tls"] }
